solved not showing image

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,6 +1,4 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-@import "font-awesome";
+
 .jumbotron{
     margin-bottom: 0;
     height: auto;
@@ -13,11 +11,6 @@
     height: 400px;
 }
 
-// .col-md-12{
-//      padding-left: 0; 
-//      padding-right: 0; 
-//      height: 100%;
-// }
 
 .well{
     height: 100%;
