--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the menu controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.jumbotron {
+    padding-bottom: 0;
+    padding-top: 0;    
+    }
+    
+    
+@media only screen and (min-width: 720px) {
+ .container-fluid,
+ .col-md-4,
+ .row {
+  height: 100%;
+ }
+
+ .jumbotron {
+  margin-bottom: 30px;
+ }
+}
